Adjusted spacing of inputs to correctly align.

--- a/manager/templates/default/css/login.css
+++ b/manager/templates/default/css/login.css
@@ -139,7 +139,7 @@ label { cursor: pointer; }
     margin: 0;
 }
 .login-form-item-first {
-    margin-right: 4px;
+    margin-right: 8px;
 }
 .login-form-element {
     padding: 0;
